--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FirePad</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -14,7 +14,7 @@
 
 <body>
   <main ui-view></main>
-  <script src="/dist/vendor.min.js"></script>
-  <script src="/dist/bundle.min.js"></script>
+  <script src="dist/vendor.min.js"></script>
+  <script src="dist/bundle.min.js"></script>
 </body>
 </html>
